# learning

./: .gitignore  README.md
cookie_cutter/data_science/template_ds/: LICENSE  README.md
cookie_cutter/local/template_ds/: Makefile  setup.py
django/djangogirls/blog/: urls.py  views.py
django/djangogirls/mysite/: settings.py
django/oneday/blog/: models.py  urls.py  views.py
django/oneday/config/: settings.py  urls.py
engineer/01_env/: HelloWorld.ipynb
fastapi/sample/: main.py
flask/flask_zero/: Pipfile
flask/sample/: app.py
flask/scikit_learn_prj/: app.py  clusterpy.py  readme.md  requirements.txt
flask/text_mining_prj/: app.py  paste_cloud.py  sample_text1.txt  sample_text2.txt  upload_cloud.py
forecast/: caller_sample.py  caller_sample_prophet.py  caller_sample_prophet_multi_variable.py  caller_sample_statsforecast.py  handler_base.py  handler_prophet.py  handler_statsforecast.py  helper.py  prophet_training_model.pkl  time_series_handler.py
hierarchical_forecast/: auto_arima_sample.py  forecast_proxy.py  hierarchicalforecast_sample.py
hydra/conf/: config.yaml
hydra_optuna_mlflow/: sample.py
optuna/: parallel_optuna.py  sequencial_optuna.py  simple_optuna.py
optuna_mlflow/: optuna_mlflow_run.py  sample.ipynb
poetry/: README.md
poetry/poetry-demo/: pyproject.toml
pycaret/: sample.ipynb  sample.py
samurai/: Pipfile
samurai/pre/: 00_前回の復習.ipynb  01_numpy.ipynb  02_宿題.ipynb  sample.py
statistics/: kstest.py
streamlit/chkbox_sample/: download.ipynb  main.py
uv_prj_sample/myproject/: pyproject.toml  setup_dev.bat
(+154 files in other folders)
