[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
    "matplotlib>=3.10.6",
    "mcp[cli]>=1.15.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "prophet>=1.1.7",
]
